fix Alert saved search

--- a/DA-ESS-CbResponse/default/savedsearches.conf
+++ b/DA-ESS-CbResponse/default/savedsearches.conf
@@ -227,7 +227,10 @@ display.general.type = statistics
 display.page.search.mode = verbose
 display.page.search.tab = statistics
 display.visualizations.show = 0
-search = | tstats count from datamodel=CbResponse.CbR_Alert by eventtype, CbR_Alert.computer_name\
+alert.digest_mode = True
+alert.suppress = 0
+alert.track = 0
+search = | tstats count from datamodel=CbResponse.CbR_Alert by  CbR_Alert.computer_name\
 | rename CbR_Alert.computer_name as HostName\
 | stats count(alert_type) as A, count(eventtype) as E, latest(_time) as Latest, earliest(_time) as Earliest by HostName \
 | eval Secs=Latest-Earliest \
