update cbapi to 1.3.0-dev and fix custom commands

--- a/DA-ESS-CbResponse/bin/cbapi/response/models/user.yaml
+++ b/DA-ESS-CbResponse/bin/cbapi/response/models/user.yaml
@@ -1,4 +1,12 @@
 type: object
+required:
+- username
+- last_name
+- first_name
+- password
+- email
+- teams
+- global_admin
 properties:
   id:
     type: string
