--- a/DA-ESS-CbResponse/default/alert_actions.conf
+++ b/DA-ESS-CbResponse/default/alert_actions.conf
@@ -10,7 +10,7 @@ command           = sendalert $action_name$ results_file="$results.file$" result
 track_alert       = 1
 param.ipaddress   = $result.dest_ip$
 param.inputtype   = cbevent
-param.dryrun      = false
+param.dryrun      = 0
 param._cam = {\
 "supports_adhoc" : true,\
 "category" : ["Information Conveyance"],\
@@ -30,7 +30,7 @@ ttl = 240
 command           = sendalert $action_name$ results_file="$results.file$" results_link="$results.url$" param.action_name=$action_name$ | stats count
 track_alert       = 1
 param.fieldname   = md5
-param.dryrun      = false
+param.dryrun      = 0
 param._cam = {\
 "supports_adhoc" : true,\
 "category" : ["Information Conveyance"],\
@@ -49,7 +49,7 @@ disabled = 0
 ttl = 240
 command           = sendalert $action_name$ results_file="$results.file$" results_link="$results.url$" param.action_name=$action_name$ | stats count
 track_alert       = 1
-param.dryrun      = false
+param.dryrun      = 0
 param._cam = {\
 "supports_adhoc" : true,\
 "category" : ["Information Conveyance"],\
