macro + saved searches

--- a/DA-ESS-CbResponse/default/macros.conf
+++ b/DA-ESS-CbResponse/default/macros.conf
@@ -1,3 +1,23 @@
 [cb]
 definition = index=* sourcetype="bit9:carbonblack:json"
 iseval = 0
+
+[windows_shells]
+definition = event_type=procstart (process=cmd.exe OR process=wscript.exe OR process=cscript.exe OR process=sh.exe OR process=ksh.exe OR process=zsh.exe OR process=bash.exe OR process=scrcons.exe)
+iseval = 0
+
+[windows_browsers]
+definition = event_type=procstart (process=chrome.exe OR process=firefox.exe OR process=safari.exe OR process=opera.exe OR process=iexplore.exe OR process=microsoftedge.exe)
+iseval = 0
+
+[office_binaries]
+definition = event_type=procstart (process=winword.exe OR excel.exe OR powerpnt.exe OR mspub.exe OR visio.exe OR Microsoft PowerPoint.app OR Microsoft Word.app OR Microsoft Excel.app OR Microsoft PowerPoint OR Microsoft Word OR Microsoft Excel OR wordpad.exe)
+iseval = 0
+
+[windows_system_processes]
+definition = event_type=procstart (process=winlogon.exe OR process=services.exe OR process=explorer.exe OR process=lsm.exe OR process=svchost.exe OR process=lsass.exe OR process=userinit.exe OR process=smss.exe OR process=taskhost.exe OR process=wininit.exe OR process=ntoskrnl.exe OR process=csrss.exe)
+iseval = 0
+
+[osx_linux_shells]
+definition = event_type=procstart (process=sh OR process=ksh OR process=zsh OR process=bash OR process=python OR process=ruby OR process=perl OR process=powershell)
+iseval = 0
