--- a/DA-ESS-CbResponse/default/savedsearches.conf
+++ b/DA-ESS-CbResponse/default/savedsearches.conf
@@ -20,7 +20,7 @@ NOT docs{}.observed_filename="*.sys" \
 NOT docs{}.observed_filename="*Library/Application Support/Spigot/ApplicationManager"\
 | stats count by cb_server, docs{}.md5, watchlist_name, docs{}.observed_filename
 
-[POWERSHELL-DOWNLOAD]
+[POWERSHELL-DOWNLOAD-HUNT]
 dispatch.earliest_time = -24h@h
 dispatch.latest_time = now
 dispatchAs = user
@@ -29,9 +29,9 @@ display.page.search.mode = verbose
 display.page.search.tab = statistics
 display.visualizations.charting.chart = bar
 display.visualizations.show = 0
-search = `cb`  process=powershell.exe DownloadFile OR invoke-webrequest | stats values(command_line) as "commands" by computer_name
+search = `cb`  process=powershell.exe (command_line=*DownloadFile* OR command_line=*invoke-webrequest*) | stats values(command_line) as "commands" by computer_name
 
-[BCDEDIT-OFF]
+[BCDEDIT-OFF-HUNT]
 dispatch.earliest_time = -24h@h
 dispatch.latest_time = now
 dispatchAs = user
@@ -40,9 +40,9 @@ display.page.search.mode = verbose
 display.page.search.tab = statistics
 display.visualizations.charting.chart = bar
 display.visualizations.show = 0
-search = `cb` process_path_name=bcdedit.exe off | stats values(command_line) as "commands" by computer_name
+search = `cb` process=bcdedit.exe command_line=*off | stats values(command_line) as "commands" by computer_name
 
-[WIN-REG-ADD]
+[WIN-REG-ADD-HUNT]
 dispatch.earliest_time = @w0
 dispatch.latest_time = now
 dispatchAs = user
@@ -51,9 +51,9 @@ display.page.search.mode = verbose
 display.page.search.tab = statistics
 display.visualizations.charting.chart = bar
 display.visualizations.show = 0
-search = `cb` process=cmd.exe "reg add" NOT citrix NOT dinocapture| stats values(command_line) as "commands" by computer_name
+search = `cb` process=cmd.exe command_line=*reg add* NOT citrix NOT dinocapture| stats values(command_line) as "commands" by computer_name
 
-[SCHEDULED-TASK-CREATION]
+[SCHEDULED-TASK-CREATION-HUNT]
 dispatch.earliest_time = -24h@h
 dispatch.latest_time = now
 dispatchAs = user
@@ -62,9 +62,9 @@ display.page.search.mode = verbose
 display.page.search.tab = statistics
 display.visualizations.charting.chart = bar
 display.visualizations.show = 0
-search = `cb` process=cmd.exe schtasks NOT WizMouse| stats values(command_line) as "commands" by computer_name
+search = `cb` process=cmd.exe command_line=*schtasks* NOT WizMouse| stats values(command_line) as "commands" by computer_name
 
-[SCHEDULED-TASK-CREATION-USER-PROFILE]
+[SCHEDULED-TASK-CREATION-USER-PROFILE-HUNT]
 dispatch.earliest_time = -24h@h
 dispatch.latest_time = now
 dispatchAs = user
@@ -73,9 +73,9 @@ display.page.search.mode = verbose
 display.page.search.tab = statistics
 display.visualizations.charting.chart = bar
 display.visualizations.show = 0
-search = `cb` process=cmd.exe schtasks appdata NOT WizMouse| stats values(command_line) as "commands" by computer_name
+search = `cb` process=cmd.exe command_line=*schtasks* *appdata* NOT WizMouse| stats values(command_line) as "commands" by computer_name
 
-[WIN-MSHTA-USAGE]
+[WIN-MSHTA-USAGE-HUNT]
 dispatch.earliest_time = -7d@h
 dispatch.latest_time = now
 dispatchAs = user
@@ -84,9 +84,9 @@ display.page.search.mode = verbose
 display.page.search.tab = statistics
 display.visualizations.charting.chart = bar
 display.visualizations.show = 0
-search = `cb` process=mshta.exe NOT *.hta| stats values(command_line) as "commands" by computer_name
+search = `cb` process=mshta.exe NOT command_line=*.hta| stats values(command_line) as "commands" by computer_name
 
-[CLI-NETUSE-HIDDENSHARE]
+[CLI-NET-HIDDENSHARE-HUNT]
 dispatch.earliest_time = -24h@h
 dispatch.latest_time = now
 dispatchAs = user
@@ -95,9 +95,9 @@ display.page.search.mode = verbose
 display.page.search.tab = statistics
 display.visualizations.charting.chart = bar
 display.visualizations.show = 0
-search = `cb` process=net.exe *ipc$*| stats values(command_line) as "commands" by computer_name
+search = `cb` process=net.exe command_line=*ipc$*| stats values(command_line) as "commands" by computer_name
 
-[CLI-NETVIEW-USAGE]
+[CLI-NETVIEW-USAGE-HUNT]
 dispatch.earliest_time = -24h@h
 dispatch.latest_time = now
 dispatchAs = user
@@ -108,7 +108,7 @@ display.visualizations.charting.chart = line
 display.visualizations.show = 0
 search = `cb` process=netview.exe | stats values(command_line) as "commands" by computer_name
 
-[WIN-NTDSUTIL-USAGE]
+[WIN-NTDSUTIL-USAGE-HUNT]
 dispatch.earliest_time = -24h@h
 dispatch.latest_time = now
 dispatchAs = user
@@ -119,7 +119,7 @@ display.visualizations.charting.chart = bar
 display.visualizations.show = 0
 search = `cb` process=ntdsutil.exe NOT svcdsrm| stats values(command_line) as "commands" by computer_name
 
-[WIN-QWINSTA-USAGE]
+[WIN-QWINSTA-USAGE-HUNT]
 dispatch.earliest_time = -24h@h
 dispatch.latest_time = now
 dispatchAs = user
@@ -130,7 +130,7 @@ display.visualizations.charting.chart = line
 display.visualizations.show = 0
 search = `cb` process=qwinsta.exe | stats values(command_line) as "commands" by computer_name
 
-[WIN-REGSVR32-NOT-DLL]
+[WIN-REGSVR32-NOT-DLL-HUNT]
 dispatch.earliest_time = -24h@h
 dispatch.latest_time = now
 dispatchAs = user
@@ -141,7 +141,7 @@ display.visualizations.charting.chart = bar
 display.visualizations.show = 0
 search = `cb` process=regsvr32.exe command_line=*.jpg* | stats values(command_line) as "commands" by computer_name
 
-[WIN-REGSVR32-PROGRAMDATA]
+[WIN-REGSVR32-PROGRAMDATA-HUNT]
 description = Regsvr32.exe executing file out of programdata directory path.
 dispatch.earliest_time = @d
 dispatch.latest_time = now
@@ -151,9 +151,9 @@ display.page.search.mode = verbose
 display.page.search.tab = statistics
 display.visualizations.charting.chart = bar
 display.visualizations.show = 0
-search = `cb` process=regsvr32.exe "\\programdata\\"| stats  values(command_line) as "commands" by computer_name
+search = `cb` process=regsvr32.exe command_line="\\programdata\\"| stats  values(command_line) as "commands" by computer_name
 
-[WIN-RUNDLL32-SCROBJ-APPBYPASS]
+[WIN-RUNDLL32-SCROBJ-APPBYPASS-HUNT]
 dispatch.earliest_time = -24h@h
 dispatch.latest_time = now
 dispatchAs = user
@@ -162,9 +162,9 @@ display.page.search.mode = verbose
 display.page.search.tab = statistics
 display.visualizations.charting.chart = bar
 display.visualizations.show = 0
-search = `cb` process_path_name=rundll32.exe command_line=*scrobj.dll* | stats values(command_line) as "commands" by _time,computer_name
+search = `cb` process=rundll32.exe command_line=*scrobj.dll* | stats values(command_line) as "commands" by _time,computer_name
 
-[PROC-WATCHDOG-CLI]
+[PROC-WATCHDOG-CLI-HUNT]
 dispatch.earliest_time = -7d@h
 dispatch.latest_time = now
 dispatchAs = user
@@ -175,7 +175,7 @@ display.visualizations.charting.chart = bar
 display.visualizations.show = 0
 search = `cb` command_line=watchdogproc*| stats values(command_line) as "commands" by computer_name
 
-[WINWORD-INVOICE]
+[WINWORD-INVOICE-HUNT]
 dispatch.earliest_time = -7d@h
 dispatch.latest_time = now
 dispatchAs = user
@@ -184,7 +184,7 @@ display.page.search.mode = verbose
 display.page.search.tab = statistics
 display.visualizations.charting.chart = line
 display.visualizations.show = 0
-search = `cb` process_path_name=winword.exe Outlook\\ \\invoice*.doc  | bucket _time span=1d | stats values(command_line) as "comamnds" by computer_name
+search = `cb` process=winword.exe Outlook\\ \\invoice*.doc  | bucket _time span=1d | stats values(command_line) as "comamnds" by computer_name
 
 [WIN-WSCRIPT-VBS-VBE-HUNT]
 dispatch.earliest_time = -24h@h
@@ -207,7 +207,7 @@ display.page.search.tab = visualizations
 display.statistics.show = 0
 search = `cb` earliest=-7h |timechart dc(computer_name) |streamstats max("Total Agents Seen") as "Max Agents Seen"
 
-[WIN-REGSVR32-USER-PROFILE]
+[WIN-REGSVR32-USER-PROFILE-HUNT]
 dispatch.earliest_time = -7d@h
 dispatch.latest_time = now
 dispatchAs = user
@@ -216,7 +216,7 @@ display.page.search.mode = verbose
 display.page.search.tab = statistics
 display.visualizations.charting.chart = bar
 display.visualizations.show = 0
-search = `cb` process=regsvr32.exe "\\AppData\\"| stats  values(command_line) as "commands" by computer_name
+search = `cb` process=regsvr32.exe command_line="\\AppData\\"| stats  values(command_line) as "commands" by computer_name
 
 [CbResponse Alert Activity]
 auto_summarize.dispatch.earliest_time = 0
@@ -243,7 +243,7 @@ search = | tstats count from datamodel=CbResponse.CbR_Alert by  CbR_Alert.comput
 | rename AB as "File activity per day", EV as "Events per day", HostName as Computer \
 | addcoltotals labelfield=Computer label=TOTALOFALLCOMPUTERS HostNum
 
-[WIN-RUNDLL32-CONTROL-RUNDLL]
+[WIN-RUNDLL32-CONTROL-RUNDLL-HUNT]
 dispatch.earliest_time = -7d@h
 dispatch.latest_time = now
 dispatchAs = user
@@ -254,7 +254,7 @@ display.visualizations.charting.chart = bar
 display.visualizations.show = 0
 search = `cb` process=rundll32.exe command_line="*,Control_RunDLL" | bucket _time span=1d | stats values(command_line) as "comamnds" by computer_name
 
-[BINARY-SIGNED-EXECUTION]
+[BINARY-SIGNED-EXECUTION-HUNT]
 dispatch.earliest_time = @d
 dispatch.latest_time = now
 dispatchAs = user
@@ -265,7 +265,7 @@ display.visualizations.charting.chart = line
 display.visualizations.show = 0
 search = `cb` ioc_type=md5 | stats  values("docs{}.digsig_sign_time")  by "docs{}.last_seen","docs{}.alliance_score_virustotal","docs{}.alliance_link_virustotal"
 
-[WIN-RUNDLL32-DLLREGISTERSERVER]
+[WIN-RUNDLL32-DLLREGISTERSERVER-HUNT]
 dispatch.earliest_time = @w0
 dispatch.latest_time = now
 dispatchAs = user
@@ -274,9 +274,9 @@ display.page.search.mode = verbose
 display.page.search.tab = statistics
 display.visualizations.charting.chart = bar
 display.visualizations.show = 0
-search = `cb` process=rundll32.exe DllRegisterServer NOT command_line="*xapauthenticodesip.dll*" | bucket _time span=1d | stats values(command_line) as "comamnds" by computer_name
+search = `cb` process=rundll32.exe command_line=*DllRegisterServer NOT command_line="*xapauthenticodesip.dll*" | bucket _time span=1d | stats values(command_line) as "comamnds" by computer_name
 
-[WIN-PROGRAMDATA-BAT]
+[WIN-PROGRAMDATA-BAT-HUNT]
 dispatch.earliest_time = -7d@h
 dispatch.latest_time = now
 dispatchAs = user
@@ -285,9 +285,9 @@ display.page.search.mode = verbose
 display.page.search.tab = statistics
 display.visualizations.charting.chart = bar
 display.visualizations.show = 0
-search = `cb` process=cmd.exe \\programdata\\ .bat NOT bginfo NOT onconnect NOT biomedical NOT goloader NOT kace| stats values(command_line) by computer_name
+search = `cb` process=cmd.exe command_line=*\\programdata\\* AND command_line=*.bat NOT bginfo NOT onconnect NOT biomedical NOT goloader NOT kace| stats values(command_line) by computer_name
 
-[BITSADMIN-USAGE]
+[BITSADMIN-USAGE-HUNT]
 dispatch.earliest_time = -24h@h
 dispatch.latest_time = now
 dispatchAs = user
@@ -298,7 +298,7 @@ display.visualizations.charting.chart = bar
 display.visualizations.show = 0
 search = `cb` process=bitsadmin.exe | stats values(command_line) by computer_name
 
-[BITSADMIN-DOWNLOAD]
+[BITSADMIN-DOWNLOAD-ALERT]
 dispatch.earliest_time = -1h:
 dispatch.latest_time = now
 dispatchAs = user
@@ -340,7 +340,7 @@ display.page.search.mode = verbose
 display.page.search.tab = statistics
 display.visualizations.charting.chart = line
 display.visualizations.show = 0
-search = `cb` process=psexec.exe | stats values(command_line) as "commands" by computer_name
+search = `cb` process=psexec.exe OR process=psexesvc.exe | stats values(command_line) as "commands" by computer_name
 
 [WIN-RUNDLL32-ROAMINGDIR-HUNT]
 dispatch.earliest_time = -24h@h
@@ -362,7 +362,7 @@ display.page.search.mode = verbose
 display.page.search.tab = statistics
 display.visualizations.charting.chart = bar
 display.visualizations.show = 0
-search = `cb` process_path_name=vssadmin.exe delete| stats values(command_line) as "commands" by computer_name
+search = `cb` process=vssadmin.exe delete| stats values(command_line) as "commands" by computer_name
 
 [WIN-DNSUNLOCKER-IOC-HUNT]
 dispatch.earliest_time = -30d@d
@@ -427,7 +427,7 @@ display.general.type = statistics
 display.page.search.mode = verbose
 display.page.search.tab = statistics
 display.visualizations.show = 0
-search = `cb` command_line="vssadmin.exe Delete Shadows /All /Quiet" OR command_line="\"C:\\Windows\\System32\\vssadmin.exe\"  Delete Shadows /All /Quiet " | stats values(command_line) as "commands" by computer_name,process,link_parent
+search = `cb` process=vssadmin.exe command_line=*delete* | stats values(command_line) as "commands" by computer_name parent_path
 
 [WIN-POWERSHELL-INVOKE-EXPRESSION-HUNT]
 dispatch.earliest_time = -24h@h
@@ -582,7 +582,7 @@ display.visualizations.charting.chart = bar
 display.visualizations.show = 0
 quantity = 0
 relation = greater than
-search = `cb` process=cmd.exe \\programdata\\ x.bat NOT bginfo NOT onconnect NOT biomedical NOT goloader NOT kace | table computer_name, username, command_line, link_process, _time
+search = `cb` process=cmd.exe command_line=\\programdata\\ AND command_line=*x.bat NOT bginfo NOT onconnect NOT biomedical NOT goloader NOT kace | table computer_name, username, command_line, link_process, _time
 
 [VSS-DELETE-CLI-ALERT]
 counttype = number of events
@@ -623,7 +623,7 @@ display.visualizations.charting.chart = bar
 display.visualizations.show = 0
 quantity = 0
 relation = greater than
-search = `cb` process=rundll32.exe DllRegisterServer NOT command_line="*xapauthenticodesip.dll*" NOT veraport20.dll NOT \\devmcopy\\| table computer_name, username, command_line, link_process, _time
+search = `cb` process=rundll32.exe command_line=*DllRegisterServer NOT command_line="*xapauthenticodesip.dll*" NOT veraport20.dll NOT \\devmcopy\\| table computer_name, username, command_line, link_process, _time
 
 [WIN-WSCRIPT-USAGE-HUNT]
 counttype = number of events
@@ -648,7 +648,7 @@ display.page.search.tab = statistics
 display.visualizations.charting.chart = bar
 quantity = 0
 relation = greater than
-search = `cb` process=mshta.exe javascript:*| head limit=1 | table computer_name, username, command_line, link_process, _time
+search = `cb` process=mshta.exe command_line=*javascript:* | table computer_name, username, command_line, link_process, _time
 
 [POWERSHELL-ENCODEDCOMMAND-ALERT]
 counttype = number of events
