--- a/DA-ESS-CbResponse/default/transforms.conf
+++ b/DA-ESS-CbResponse/default/transforms.conf
@@ -13,3 +13,28 @@ filename = critprocs.csv
 batch_index_query = 0
 case_sensitive_match = 1
 filename = file_sharing_and_backup.csv
+
+[active-directory]
+batch_index_query = 0
+case_sensitive_match = 1
+filename = active-directory.csv
+
+[scripting]
+batch_index_query = 0
+case_sensitive_match = 1
+filename = scripting.csv
+
+[anonymizers]
+batch_index_query = 0
+case_sensitive_match = 1
+filename = anonymizer.csv
+
+[bittorrent]
+batch_index_query = 0
+case_sensitive_match = 1
+filename = bittorrent.csv
+
+[security]
+batch_index_query = 0
+case_sensitive_match = 1
+filename = security.csv
