--- a/DA-ESS-CbResponse/default/web.conf
+++ b/DA-ESS-CbResponse/default/web.conf
@@ -1,7 +1,7 @@
-[expose:CbResponse_setup]
-pattern = /CbResponse_input_setup/CbResponse_settings
+[expose:DA-ESS-CbResponse_setup]
+pattern = /DA-ESS-CbResponse_input_setup/DA-ESS-CbResponse_settings
 methods = GET, POST
 
-[expose:CbResponse_settings]
-pattern = /CbResponse_input_setup/CbResponse_settings/*
+[expose:DA-ESS-CbResponse_settings]
+pattern = /DA-ESS-CbResponse_input_setup/DA-ESS-CbResponse_settings/*
 methods = GET, POST, DELETE
