--- a/DA-ESS-CbResponse/default/app.conf
+++ b/DA-ESS-CbResponse/default/app.conf
@@ -10,9 +10,9 @@ description = Add-on to connect Cb Response to Splunk. Ingest feed, watchlist, a
 
 [ui]
 is_visible = 1
-label = DA-ESS-CbResponse
+label = CbResponse
 docs_section_override = AddOns:released
-setup_view = CarbonBlack_Response_App
+setup_view = CbResponse
 
 [package]
 id = DA-ESS-CbResponse
