Changing setupview name

--- a/DA-ESS-CbResponse/default/app.conf
+++ b/DA-ESS-CbResponse/default/app.conf
@@ -12,7 +12,7 @@ description = Add-on to connect Cb Response to Splunk. Ingest feed, watchlist, a
 is_visible = 1
 label = Cb Response
 docs_section_override = AddOns:released
-setup_view = CbResponse
+setup_view = Setup
 
 [package]
 id = DA-ESS-CbResponse
