--- a/DA-ESS-CbResponse/default/app.conf
+++ b/DA-ESS-CbResponse/default/app.conf
@@ -10,7 +10,7 @@ description = Add-on to connect Cb Response to Splunk. Ingest feed, watchlist, a
 
 [ui]
 is_visible = 1
-label = Cb Response
+label = DA-ESS-Cb-Response
 docs_section_override = AddOns:released
 setup_view = Setup
 
