--- a/DA-ESS-CbResponse/default/app.conf
+++ b/DA-ESS-CbResponse/default/app.conf
@@ -5,12 +5,12 @@ build = 20170406
 
 [launcher]
 author = Carbon Black Developer Network
-version = 2.1.0
+version = 2.1.1
 description = Add-on to connect Cb Response to Splunk. Ingest feed, watchlist, and raw endpoint events into Splunk to correlate across other security solutions and take action through Cb Response's Live Response capability.
 
 [ui]
 is_visible = 1
-label = DA-ESS-Cb-Response
+label = Cb Response
 docs_section_override = AddOns:released
 setup_view = Setup
 
